crates/solidity/testing/snapshots/bindings_output/yul/labels/generated/0.5.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected CloseBrace or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or OpenBrace or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or YulBreakKeyword or YulByteKeyword or YulContinueKeyword or YulDecimalLiteral or YulFalseKeyword or YulForKeyword or YulFunctionKeyword or YulHexLiteral or YulIdentifier or YulIfKeyword or YulLetKeyword or YulSwitchKeyword or YulTrueKeyword.
    ╭─[input.sol:7:13]
    │
  7 │ ╭─▶         loop:
    ┆ ┆   
 14 │ ├─▶         }
    │ │               
    │ ╰─────────────── Error occurred here.
────╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     function test() public {
   │              ──┬─  
   │                ╰─── name: 2
   │ 
 4 │             let n := calldataload(4)
   │                 ┬    ──────┬─────  
   │                 ╰────────────────── name: 3
   │                            │       
   │                            ╰─────── ref: built-in
 5 │             let a := 1
   │                 ┬  
   │                 ╰── name: 4
 6 │             let b := a
   │                 ┬    ┬  
   │                 ╰─────── name: 5
   │                      │  
   │                      ╰── ref: 4
 7 │         loop:
   │         ──┬─  
   │           ╰─── unresolved
───╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │ ╭─│ ▶ contract Test {
  2 │ │ ╭─▶     function test() public {
    ┆ ┆ ┆   
  4 │ │ │               let n := calldataload(4)
    │ │ │   ──────────────────┬──────────────────  
    │ │ │                     ╰──────────────────── definiens: 3
  5 │ │ │               let a := 1
    │ │ │   ───────────┬───────────  
    │ │ │              ╰───────────── definiens: 4
  6 │ │ │               let b := a
    │ │ │   ───────────┬───────────  
    │ │ │              ╰───────────── definiens: 5
    ┆ ┆ ┆   
 15 │ │ ├─▶     }
    │ │ │           
    │ │ ╰─────────── definiens: 2
 16 │ ├───▶ }
    │ │         
    │ ╰───────── definiens: 1
────╯
